Implemented patameters for smooth de combine for boolean fractals

--- a/mandelbulber2/qt/tab_fractal.ui
+++ b/mandelbulber2/qt/tab_fractal.ui
@@ -405,6 +405,53 @@
         </item>
        </layout>
       </item>
+      <item>
+       <widget class="MyGroupBox" name="groupCheck_smooth_de_combine_enable">
+        <property name="title">
+         <string>Smooth DE combine</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_4">
+         <property name="leftMargin">
+          <number>2</number>
+         </property>
+         <property name="topMargin">
+          <number>2</number>
+         </property>
+         <property name="rightMargin">
+          <number>2</number>
+         </property>
+         <property name="bottomMargin">
+          <number>2</number>
+         </property>
+         <property name="spacing">
+          <number>2</number>
+         </property>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_306">
+           <property name="text">
+            <string>Smooth distance:</string>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="MyLineEdit" name="logedit_smooth_de_combine_distance">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
